Working add, remove, get cart and checkout. Communicate using ids. Fixed other things