@@ -1,5 +1,7 @@
 package org.ServerSide;
 
+import org.Domain.Cart;
+import org.Domain.Client;
 import org.Domain.Location;
 import org.Domain.Shop;
 import org.Filters.Filter;
@@ -22,7 +24,6 @@ public class ClientCommunicate extends Thread {
     public ClientCommunicate() throws IOException {
         request_socket = new Socket(MasterServer.SERVER_LOCAL_HOST, MasterServer.SERVER_CLIENT_PORT);
         out = new ObjectOutputStream(request_socket.getOutputStream());
-        out.flush();
         in = new ObjectInputStream(request_socket.getInputStream());
     }
 
@@ -31,7 +32,10 @@ public class ClientCommunicate extends Thread {
         try {
 
             Location loc = new Location(45, 45);
-            out.writeObject(loc);
+//            out.writeObject(loc);
+            Client cl = new Client("BigTso", loc);
+            cl.updateBalance(500.f);
+            out.writeObject(cl);
             out.flush();
 
             out.writeInt(Command.CommandTypeClient.FILTER.ordinal());
@@ -61,7 +65,52 @@ public class ClientCommunicate extends Thread {
             }
 
             out.writeInt(Command.CommandTypeClient.CHOSE_SHOP.ordinal());
-            out.writeObject(filtered_shops.get(0));
+            out.writeInt(filtered_shops.getFirst().getId());
+            out.flush();
+
+            Shop resulting_shop = (Shop) in.readObject();
+            System.out.println("Got shop: " + resulting_shop);
+
+            out.writeInt(Command.CommandTypeClient.ADD_TO_CART.ordinal());
+            Integer product_id = (Integer) filtered_shops.getFirst().getProducts().keySet().toArray()[0];
+            System.out.println("Trying to add product with id " + product_id);
+            out.writeInt(product_id);
+            out.writeInt(400);
+            out.flush();
+
+            boolean added_to_cart = in.readBoolean();
+            if(added_to_cart)
+                System.out.println("Added product to cart successfully");
+            else
+                System.out.println("Product wasn't added to cart successfully.");
+
+            {
+                out.writeInt(Command.CommandTypeClient.GET_CART.ordinal());
+                out.flush();
+                Cart tempCart = (Cart) in.readObject();
+
+                tempCart.getProducts().forEach((key, value) -> System.out.println("{\n" + key.toString() + "\nQuantity: " + value + "}"));
+            }
+            out.writeInt(Command.CommandTypeClient.REMOVE_FROM_CART.ordinal());
+            out.writeInt(product_id);
+            out.writeInt(10);
+            out.flush();
+
+            Boolean removed = in.readBoolean();
+            if(removed){
+                System.out.println("Removal was successful.");
+            }
+
+            {
+                out.writeInt(Command.CommandTypeClient.GET_CART.ordinal());
+                out.flush();
+                Cart cart = (Cart) in.readObject();
+
+                cart.getProducts().forEach((key, value) -> System.out.println("{\n" + key.toString() + "\nQuantity: " + value + "}"));
+            }
+            System.out.println("Sending checkout command...");
+            out.writeInt(Command.CommandTypeClient.CHECKOUT.ordinal());
+            out.flush();
 
             out.writeInt(Command.CommandTypeClient.QUIT.ordinal());
             out.flush();
